count all device api
